--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-    "C_Cpp.errorSquiggles": "disabled",
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#27310D",
-        "titleBar.activeBackground": "#374513",
-        "titleBar.activeForeground": "#F8FBF0"
-    }
+    "C_Cpp.errorSquiggles": "disabled"
 }
